# fastapi_empty_app

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
scripts/: build.sh
src/backend/: .env  README.md  babel-mapping.ini  backend.dockerfile  gunicorn_conf.py  pyproject.toml  robots.txt  sqlite.db  tests-start.sh
src/backend/alembic/: env.py
src/backend/alembic/versions/: 174d34611555_1_start.py  d3747d7a3585_1_start.py
src/backend/app/: initial_data.py  main.py  sitemap.py
src/backend/app/conf/: config.py  secrets.json
src/backend/app/contrib/auth/: forms.py  models.py  repository.py  routers.py  schema.py
src/backend/app/contrib/blog/: forms.py  models.py  repository.py
src/backend/app/contrib/config/: models.py  repository.py
src/backend/app/contrib/contact_us/: forms.py  models.py  repository.py  routers.py
src/backend/app/contrib/dashboard/: forms.py  routers.py
src/backend/app/core/: authentication.py  exceptions.py  forms.py  middleware.py  validators.py
src/backend/app/db/: __init__.py  init_db.py  models.py  repository.py  session.py
src/backend/app/routers/: dependency.py  urls.py
src/backend/app/utils/: emails.py  security.py  templating.py  urls.py
src/backend/locale/: base.pot
src/backend/scripts/: start.sh
src/backend/static/css/: animate.min.css  bootstrap.min.css  font-icons.min.css  responsive.min.css  style.css  style.min.css
src/backend/static/js/: functions.min.js
src/backend/templates/: base.html
src/backend/templates/dashboard/: index.html
src/backend/templates/partials/: pagination.html
(+23 files in other folders)
